news fixed template for academic_unit field added

--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -6,6 +6,8 @@
           <!-- <a href="layouts.html"><i class="fa fa-diamond"></i> <span class="nav-label">Layouts</span></a> -->
           {{#link-to "rss"}}<i class="fa fa-rss"></i> <span class="nav-label">RSS</span>{{/link-to}}
           {{#link-to "rssfilter"}}<i class="fa fa-rss"></i> <span class="nav-label">RSS con Filtro</span>{{/link-to}}
+          {{#link-to "news"}}<i class="fa fa-envelope"></i> <span class="nav-label">Noticias Uniandes</span>{{/link-to}}
+          {{#link-to "employees"}}<i class="fa fa-users"></i> <span class="nav-label">Empleados</span>{{/link-to}}
         </li>
       </ul>
     </div>
