--- a/client/app/templates/news.hbs
+++ b/client/app/templates/news.hbs
@@ -18,9 +18,7 @@
                 <th>Título</th>
                 <th>Descripción</th>
                 <th>Enlace</th>
-                <th>Fecha Publicación</th>
-                <th>Categoría</th>
-                <th>Fuente</th>
+                <th>Unidad Académica</th>
               </tr>
             </thead>
             <tfoot>
@@ -28,9 +26,7 @@
                 <th>Título</th>
                 <th>Descripción</th>
                 <th>Enlace</th>
-                <th>Fecha Publicación</th>
-                <th>Categoría</th>
-                <th>Fuente</th>
+                <th>Unidad Académica</th>
               </tr>
             </tfoot>
             <tbody>
@@ -39,9 +35,7 @@
                 <td>{{new.title}}</td>
                 <td>{{new.description}}</td>
                 <td>{{new.link}}</td>
-                <td>{{new.pubdate}}</td>
-                <td>{{new.category}}</td>              
-                <td>{{new.source}}</td>
+                <td>{{new.academic_unit}}</td>
               </tr>
               {{/each}}
             </tbody>
