--- a/client/app/templates/rss.hbs
+++ b/client/app/templates/rss.hbs
@@ -5,7 +5,7 @@
       <div class="ibox float-e-margins">
         <div class="ibox-title">
           <h5>Listado Completo de Noticias</h5>
-          <div class="ibox-tools">            
+          <div class="ibox-tools">
             <ul class="dropdown-menu dropdown-user">
               <li>
                 <a href="#">Config option 1</a>
@@ -40,6 +40,16 @@
             </tbody>
           {{/data-table}}
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cargando datos...</h5>
       </div>
     </div>
   </div>
